SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.0.3 - not yet released
* devices
  - EW, Volkslogger: restart I/O thread after declaration failure
  - CAI302: check for I/O errors during declaration
  - Volkslogger: enable task declaration
* user interface
  - Language: translation updates
  - Auto zoom: don't disable in circling mode
  - more airspace rendering fixes for Android
* map
  - Terrain: load more raster tiles on modern devices (second try)
* Android
  - keep display backlight on, don't suspend
  - support extra large displays (tablets)
  - allow task switching

Version 6.0.2 - 2011/01/20
* devices
  - more robust NMEA checksum parser
  - CAI302: restart I/O thread after declaration failure
  - CAI302: parse PCAID baro altitude if "!w" unavailable
  - Condor: read wind from LXWP0
* user interface
  - Language: translation updates
  - Language: add Spanish translation
  - Language: add Russian translation
  - Language: translations Czech, Greek, Croatian, Italian, Serbian,
    Swedish imported from LK8000
  - Window: disable sunken window edges on HP31x
  - Target: adjust map layout
* map
  - Waypoints: more reliable waypoint decluttering
  - Topology: fix rendering bug
  - Terrain: reduce slope shading artefacts
  - Terrain: load more raster tiles on modern devices
  - Task: fix crash when drawing deformed sectors
* data files
  - Fixed potential crash while reading airfields files
  - Added more polars (Hang gliders, DG1000, Blanik, Jantar, ...)
* Android / Linux / OpenGL
  - enable translations
  - fix dialog titles
  - support big displays (tablets)
  - implement check boxes (for enabling "Expert" mode)
  - fix airspace rendering

Version 6.0.1 - 2010/12/26
* map
  - task, glide terrain: fix rendering bugs
* user interface
  - Language: translation updates
  - Language: always fall back to resource data
  - Language: enable translation on PPC2000/PPC2003